data/derived/comb/progs/unify/prog6631.ml.out
Characters 42-60:
  let rec digitsOfInt n = let x=n mod 10 in (digitsOfInt n/10)@[x];;
                                            ^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
